--- a/app/globals.css
+++ b/app/globals.css
@@ -31,18 +31,20 @@ button {
 }
 
 .container {
-  max-width: 1240px;
+  max-width: 1200px;
   margin: 0 auto;
+  padding: 0 20px 0 20px;
 }
 
 nav {
   background-color: white;
-  padding: 5px;
+  padding: 20px 0 20px 0;
   position: sticky;
   top: 0;
   width: 100%;
   z-index: 999;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  font-weight: 500;
 }
 
 .nav-container {
@@ -66,8 +68,6 @@ nav {
   display: flex;
   align-items: center;
   flex-direction: column;
-  font-size: 20px;
-  font-weight: 500;
 }
 
 .product-menu-top {
@@ -78,68 +78,40 @@ nav {
   gap: 2px;
 }
 
-.home-link {
-  font-size: 20px;
-  font-weight: 500;
-}
-
 .shop {
   display: flex;
   align-items: center;
   font-size: 20px;
-  font-weight: 500;
   position: relative;
 }
 
 .shop input {
-  width: 350px;
+  width: 320px;
   border-radius: 25px;
   padding: 8px 10px 8px 20px;
   border: 1px solid var(--input-border-color);
-  font-size: 1rem;
-}
-
-.shop input::placeholder {
-  font-size: 1rem;
+  font-size: 14px;
 }
 
 .shop input:focus {
   outline: none;
 }
 
-.products-dropdown {
+.products-dropdown,
+.user-dropdown {
   position: absolute;
-  margin-top: 47px;
+  top: 100%;
+  list-style: none;
   padding: 10px 0;
   z-index: 1;
   min-width: 100px;
-  border-top: none;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  animation-name: fade-in;
-  animation-duration: 0.5s;
-  animation-timing-function: ease-in-out;
+  animation: fade-in 0.5s ease-in-out;
   background-color: white;
 }
 
 .user-dropdown {
-  position: absolute;
-  margin-top: 200px;
-  right: 0;
-  padding: 10px 0;
-  z-index: 1;
-  min-width: 100px;
-  border-top: none;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  animation-name: fade-in;
-  animation-duration: 0.5s;
-  animation-timing-function: ease-in-out;
-  background-color: white;
+  right: 10.5%;
 }
 
 @keyframes fade-in {
@@ -164,9 +136,15 @@ nav {
 .user-options {
   display: flex;
   align-items: center;
-  font-size: 20px;
-  font-weight: 500;
-  position: relative;
+  flex-direction: column;
+}
+
+.user-options-top {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  gap: 30px;
 }
 
 .nav-cart,
@@ -177,19 +155,7 @@ nav {
   gap: 5px;
 }
 
-@media (max-width: 1000px) {
-  .shop input {
-    width: 250px;
-  }
-}
-
 @media (max-width: 900px) {
-
-  .home-link,
-  .product-menu,
-  .user-options {
-    font-size: 15px;
-  }
 
   .shop input {
     font-size: 0.8rem;
@@ -207,9 +173,23 @@ nav {
     gap: 10px;
   }
 
+  .shop input {
+    width: 250px;
+  }
+
   .nav-cart,
   .nav-account {
     gap: 2px;
+  }
+}
+
+@media (max-width: 660px) {
+  .shop input {
+    width: 200px;
+  }
+
+  nav {
+    font-size: 12px;
   }
 }
 
@@ -221,8 +201,16 @@ nav {
     gap: 5px;
   }
 
+  .shop input {
+    width: 250px;
+  }
+
+  nav {
+    font-size: 16px;
+  }
+
   .user-options {
-    font-size: 15px;
+    font-size: 16px;
     display: flex;
     align-items: center;
   }
@@ -352,34 +340,35 @@ nav {
 
 /* Card stuff */
 
+.product-page-header {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 50px;
+}
+
+.product-page-header h1 {
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.product-page-header span {
+  display: flex;
+  align-items: center;
+  gap: 7px;
+  cursor: pointer;
+}
+
 .card-outer-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 40px;
-}
-
-.filter-container {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 20px;
-  padding: 10px;
-  border-top: 1px solid;
-  border-bottom: 1px solid;
-}
-
-.filter-group {
-  display: flex;
-  flex-direction: column;
 }
 
 .card-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 40px;
   max-width: 1200px;
-  margin: 10px;
   text-align: center;
   justify-items: center;
   box-sizing: border-box;
@@ -461,9 +450,7 @@ nav {
 }
 
 .card-admin-actions button,
-.card-actions button,
-.total-price button,
-.empty-cart button {
+.card-actions button {
   font-size: 1rem;
   font-weight: 500;
   background-color: var(--main-button-color);
@@ -487,12 +474,28 @@ nav {
 .total-price {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 20px;
 }
 
 .total-price span {
   font-size: 1.2rem;
-  font-weight: bold;
+}
+
+.total-price button,
+.empty-cart button {
+  font-size: 1rem;
+  font-weight: 500;
+  background-color: var(--main-button-color);
+  cursor: pointer;
+  border: none;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  height: 40px;
+  padding: 10px;
 }
 
 .product-quantity {
@@ -513,18 +516,6 @@ nav {
 
 .product-quantity input:focus {
   outline: none;
-}
-
-.heading-container {
-  background-color: var(--heading-bg-color);
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  min-height: 80px;
-  margin-bottom: 20px;
-  font-size: 1.2rem;
 }
 
 @media (max-width: 1100px) {
