--- a/app/globals.css
+++ b/app/globals.css
@@ -343,10 +343,11 @@ nav {
 .product-page-header {
   display: flex;
   justify-content: space-between;
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
-.product-page-header h1 {
+.product-page-header h1,
+.product-page-header h2 {
   font-size: 2rem;
   font-weight: 700;
 }
@@ -531,25 +532,72 @@ nav {
     gap: 30px;
     padding: 0 10px;
   }
-
-  .filter-container {
-    gap: 10px;
-    padding: 5px;
-    border-radius: 15px;
-    font-size: 0.9rem;
-  }
-}
-
-@media (max-width: 600px) {
-  .filter-container {
-    font-size: 0.7rem;
-  }
 }
 
 @media (max-width: 500px) {
   .card-container {
     grid-template-columns: 1fr;
   }
+}
+
+/* Filter component */
+
+.product-page-container {
+  display: flex;
+  justify-content: center;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 90;
+}
+
+.filter-container {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 300px;
+  height: 100%;
+  background-color: white;
+  color: black;
+  z-index: 100;
+  overflow-y: hidden;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.filter-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 70px;
+}
+
+.filter-top svg {
+  cursor: pointer;
+}
+
+.filter-group {
+  display: flex;
+  flex-direction: column;
+}
+
+.filter-group span {
+  font-weight: 600;
+  font-size: 1.2rem;
+}
+
+.filter-group label {
+  display: flex;
+  gap: 6px;
+  align-items: center;
 }
 
 /* Orders/Transactions pages */
