--- a/app/globals.css
+++ b/app/globals.css
@@ -534,7 +534,7 @@ nav {
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
   .card-container {
     grid-template-columns: 1fr;
   }
@@ -554,12 +554,12 @@ nav {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 90;
+  z-index: 100;
 }
 
 .filter-container {
   position: fixed;
-  top: 0;
+  top: 78px;
   right: 0;
   width: 300px;
   height: 100%;
@@ -577,7 +577,6 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 70px;
 }
 
 .filter-top svg {
@@ -587,6 +586,7 @@ nav {
 .filter-group {
   display: flex;
   flex-direction: column;
+  margin-bottom: 6px;
 }
 
 .filter-group span {
@@ -598,6 +598,52 @@ nav {
   display: flex;
   gap: 6px;
   align-items: center;
+}
+
+@media (max-width: 1100px) {
+
+  .filter-container {
+    width: 220px;
+  }
+
+  .filter-top h2 {
+    font-size: 20px;
+  }
+
+  .filter-group span {
+    font-size: 15px;
+  }
+
+  .filter-group label {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 900px) {
+  .filter-container {
+    top: 73px;
+  }
+}
+
+@media (max-width: 600px) {
+  .filter-container {
+    top: 130px;
+    width: 160px;
+    gap: 5px;
+  }
+
+  .filter-top h2 {
+    font-size: 15px;
+  }
+
+  .filter-group span {
+    font-size: 12px;
+  }
+
+  .filter-group label {
+    font-size: 10px;
+    gap: 3px;
+  }
 }
 
 /* Orders/Transactions pages */
