fix price being pushed by long name

--- a/app/globals.css
+++ b/app/globals.css
@@ -422,9 +422,11 @@ nav {
 }
 
 .card-name {
+  height: 85px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
   gap: 10px;
 }
 
